[package]
name = "bq40z50"
description = "Rust driver for Texas Instrument BQ40Z50 battery manager."
version = "0.1.4"
authors = ["Patrick Jusic <patrick.jusic@protonmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/uspaceit/BQ40Z50-rs"

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
byteorder = { version = "1.4.3", default-features = false }

[dev-dependencies]
rppal = { version = "0.11.3", features = ["hal"] }